Fix some CSS issues on Safari

--- a/src/components/Modal/SetBuilder.scss
+++ b/src/components/Modal/SetBuilder.scss
@@ -114,7 +114,7 @@
   .buttons {
     display: flex;
     flex-direction: row;
-    justify-content: right;
+    justify-content: flex-end;
     user-select: none;
 
     BUTTON {
